--- a/src/style.sass
+++ b/src/style.sass
@@ -130,6 +130,7 @@ select
     border-width: 1px
     height: 4.5vh
     padding: 1%
+    white-space: pre
     .button
         float: right
         border-radius: 0.5vh
@@ -169,6 +170,7 @@ select
     text-align: center
     display: inline-block
     font-size: 5.0vh
+    white-space: pre
 
 #errors
     display: block
